--- a/src/Components/UserSidebar/Sidebar.css
+++ b/src/Components/UserSidebar/Sidebar.css
@@ -22,24 +22,29 @@
 }
 
 .sidebarRows .row #iconContainer {
-    flex: 30%;
+    flex: 1;
     display: grid;
-    place-items: center;
+    place-items: start end;
 }
 
 .sidebarRows .row #titleContainer {
-    flex: 70%;
+    flex: 2 50px;
 }
 
 .sidebarRows .row #titleContainer h3 {
-    font-weight: lighter;
-    font-size: 15px;
+    font-weight: normal;
+    font-size: 16px;
 }
 
 #active {
     background-color: #d5d5d5;
+    font-weight: bold;
+}
+
+#active #titleContainer h3 {
+    font-weight: bold;
 }
 
 #active #iconContainer {
-    color: red;
+    color: #046CC7;
 }
