--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-@import 'tailwindcss/base';
-
+/* @import 'tailwindcss/base';
 @import 'tailwindcss/components';
-
-@import 'tailwindcss/utilities';
+@import 'tailwindcss/utilities'; */
+/* fixing module not found error, fuq */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   margin: 0;
