--- a/src/Containers/LandingPage/LandingPage.css
+++ b/src/Containers/LandingPage/LandingPage.css
@@ -1,7 +1,6 @@
 .container {
     width: 100%;
     height: 100%;
-    min-height: calc(100vh - 30px);
     padding-bottom: 20px;
     position: relative;
 }
@@ -11,17 +10,38 @@
     width: 50%;
     top: 10%;
     left: 50%;
-    transform: translate(-35%, 0%);
-    flex: 1;
+    transform: translate(-50%, 0%);
 }
 
 .pagination {
     position: absolute;
-    top: 100%;
     left: 50%;
-    transform: translate(-10%, 0%);
-    padding-top: 10px;
-    padding-bottom: 10px;
+    transform: translate(-50%, 50%);
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    cursor: pointer;
+}
+
+.pagination a {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #6c7ac9;
+    color: #6c7ac9;
+}
+  
+.pagination__link {
+    font-weight: bold;
+}
+  
+.pagination__link--active a {
+    color: #fff;
+    background: #6c7ac9;
+}
+  
+.pagination__link--disabled a {
+    color: rgb(198, 197, 202);
+    border: 1px solid rgb(198, 197, 202);
 }
 
 
