--- a/src/Containers/LandingPage/LandingPage.css
+++ b/src/Containers/LandingPage/LandingPage.css
@@ -5,14 +5,6 @@
     position: relative;
 }
 
-.listings {
-    position: absolute;
-    width: 50%;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-}
-
 .pagination {
     position: absolute;
     left: 50%;
@@ -44,4 +36,13 @@
     border: 1px solid rgb(198, 197, 202);
 }
 
+.verifier {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+}
 
